<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_16"
    tools:context=".presentation.ui.fragments.sort.SortHeroesFragment">

    <TextView
        android:id="@+id/txtOrderByTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/txt_order_by_title_dialog_fragment"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupOrderByTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:checkedChip="@+id/chipOrderName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrderByTitle"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOrderName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordey_by_name" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOrderModified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordey_by_modified" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/txtOrderOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/txt_order_by_options_dialog_fragment"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupOrderByTitle" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupOrderByOptions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        app:checkedChip="@+id/chipOrderGrowing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOrderOptions"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOrderGrowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordey_by_growing" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipOrderDescending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ordey_by_descending" />

    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApplySort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginBottom="@dimen/margin_8"
        android:text="@string/order_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupOrderByOptions" />

    <ProgressBar
        android:id="@+id/progressBarSort"
        android:layout_width="@dimen/height_40"
        android:layout_height="@dimen/height_40"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroupOrderByOptions" />

</androidx.constraintlayout.widget.ConstraintLayout>